# nat_serde_test

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  LICENSE  README.md  rust-toolchain.toml
src/: .gitignore  Cargo.toml  cucumber.js  dfx.json  dfx_package.json  package-lock.json  package.json  sh_build.sh  sh_generate.sh  sh_package.sh  sh_publish.sh  sh_reinstall.sh  sh_setup_dev.sh
src/.devcontainer/: Dockerfile  devcontainer.json
src/canisters/api_mock_canister/: Cargo.toml
src/canisters/api_mock_canister/src/: actor.did  actor.rs  errors.rs  lib.rs  mock_utils.rs  state.rs
src/canisters/nat_test/: Cargo.toml
src/canisters/nat_test/src/: actor.did  actor.rs
src/common/build_common/src/: lib.rs
src/common/common/: Cargo.toml
src/common/common/src/: constants.rs  dto.rs  errors.rs  ic_logger.rs  lib.rs  named_canister_ids.rs  named_principals.rs  permissions.rs  timeout_lock.rs
src/common/common/src/canister_api/: ic_api.rs  ic_impl.rs  mod.rs
src/common/common/src/constants/: tests.rs
src/common/common/src/dto/: tests.rs
src/common/common/src/types/: ic_ledger_types.rs  ic_management_types.rs  mod.rs
src/common/common_actor/: Cargo.toml
src/common/common_actor/src/: actor.rs
src/common/test_common/src/: canister_api.rs  lib.rs  principal.rs
src/env_configs/: dev.config.env  dev.principals.env  production.canister_ids.env  staging.canister_ids.env  staging.config.env
src/scripts/: index.ts  reinstall_all.ts  updateLocalConfigs.ts
src/scripts/src/: tasks.ts
