[package]
name = "nat_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
candid = "0.7.12"
serde = "1.0.136"
serde_bytes = "0.11"
log = "0.4"
common = { path = "../../common/common"}
thiserror = "1.0"
anyhow = "1.0.57"
num-bigint =  {version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"

[dev-dependencies]
test_common = { path = "../../common/test_common" }
async-std = { version = "1.12", features = ["attributes"] }
